--- a/www/bibliography.bib
+++ b/www/bibliography.bib
@@ -1,3 +1,268 @@
+@misc{codedbias,
+  author={Shalini Kantayya and Joy Buolamwini},
+  title =  {Coded Bias},
+  year = {2020},
+  howpublished={7th Empire Media},
+  url={https://www.codedbias.com/}
+}
+
+@misc{solow21,
+  author={Barbara Solow},
+  title={{Quinn White} '23: Studying Trends Through an Ethical Lens},
+  year={2021},
+  month={12},
+  day={6},
+  howpublished={Gr\'{e}court Gate},
+  url={https://www.smith.edu/news/quinn-white-23-studying-trends-through-an-ethical-lens}
+}
+
+@book{fry2018hello,
+  title={Hello world: Being human in the age of algorithms},
+  author={Fry, Hannah},
+  year={2018},
+  publisher={New York: WW Norton \& Company},
+  pages={256},
+  isbn={978-0-393-35736-3},
+  url={https://wwnorton.com/books/Hello-World}
+}
+
+@article{hoffmann2021teaching,
+  title={Teaching Data Ethics: Foundations and Possibilities from Engineering and Computer Science Ethics Education},
+  author={Hoffmann, Anna Lauren and Cross, Katherine Alejandra},
+  year={2021},
+  url={http://hdl.handle.net/1773/46921},
+  howpublished={University of Washington ResearchWorks Archive}
+}
+
+@article{elisa2020data,
+  title={Is data literacy a catalyst of social justice? A response from nine data literacy initiatives in higher education},
+  author={Elisa Raffaghelli, Juliana},
+  journal={Education Sciences},
+  volume={10},
+  number={9},
+  pages={233},
+  year={2020},
+  doi={10.3390/educsci10090233},
+  url={https://doi.org/10.3390/educsci10090233},
+  publisher={Multidisciplinary Digital Publishing Institute}
+}
+
+
+@inproceedings{shapiro2020re,
+  title={Re-Shape: A method to teach data ethics for data science education},
+  author={Shapiro, Ben Rydal and Meng, Amanda and O'Donnell, Cody and Lou, Charlotte and Zhao, Edwin and Dankwa, Bianca and Hostetler, Andrew},
+  booktitle={Proceedings of the 2020 CHI Conference on Human Factors in Computing Systems},
+  pages={1--13},
+  doi={10.1145/3313831.3376251},
+  url={https://doi.org/10.1145/3313831.3376251},
+  year={2020}
+}
+
+
+@article{chivukula2021surveying,
+  title={Surveying the Landscape of Ethics-Focused Design Methods},
+  author={Chivukula, Shruthi Sai and Li, Ziqing and Pivonka, Anne C and Chen, Jingning and Gray, Colin M},
+  journal={arXiv preprint arXiv:2102.08909},
+  url={https://arxiv.org/abs/2102.08909},
+  year={2021}
+}
+
+@article{utts2021enhancing,
+  title={Enhancing Data Science Ethics Through Statistical Education and Practice},
+  author={Utts, Jessica},
+  journal={International Statistical Review},
+  volume={89},
+  number={1},
+  pages={1--17},
+  year={2021},
+  doi={10.1111/insr.12446},
+  url={https://doi.org/10.1111/insr.12446},
+  publisher={Wiley Online Library}
+}
+
+
+@article{floridi2016what,
+  title={What is data ethics?},
+  author={Luciano Floridi and Mariarosaria Taddeo},
+  journal={Philosophical Transactions of the Royal Society A},
+  year={2016},
+  month={12},
+  day={28},
+  doi={10.1098/rsta.2016.0360},
+  url={http://dx.doi.org/10.1098/rsta.2016.0360},
+}
+
+@article{pearson2021georgiou,
+  title={ASA, International Community Continue to Decry Georgiou Persecution},
+  author={Steve Pierson and Lynn Wilkinson},
+  journal={AMSTAT News},
+  year={2021},
+  month={5},
+  day={1},
+  url={https://magazine.amstat.org/blog/2021/05/01/asa-decries-georgiou-persecution/},
+}
+
+@inproceedings{washington2020whose,
+  title={Whose side are ethics codes on? power, responsibility and the social good},
+  author={Washington, Anne L and Kuo, Rachel},
+  booktitle={Proceedings of the 2020 Conference on Fairness, Accountability, and Transparency},
+  pages={230--240},
+  year={2020},
+  doi={10.1145/3351095.3372844},
+  url={https://dl.acm.org/doi/abs/10.1145/3351095.3372844}
+}
+
+
+@inproceedings{blair2021establishing,
+  title={Establishing ABET accreditation criteria for data science},
+  author={Blair, Jean RS and Jones, Lawrence and Leidig, Paul and Murray, Scott and Raj, Rajendra K and Romanowski, Carol J},
+  booktitle={Proceedings of the 52nd ACM Technical Symposium on Computer Science Education},
+  pages={535--540},
+  year={2021},
+  month={3},
+  doi={10.1145/3408877.3432445},
+  url={https://doi.org/10.1145/3408877.3432445}
+}
+
+
+@article{bloom1956taxonomy,
+  title={Taxonomy of educational objectives. Vol. 1: Cognitive domain},
+  editor={Bloom, Benjamin S and others},
+  author={Bloom, Benjamin S and others},
+  journal={New York: McKay},
+  volume={20},
+  number={24},
+  pages={1},
+  year={1956}
+}
+
+
+@inproceedings{carter2019ethics,
+  title={An Ethics Curriculum for CS with Flexibility and Continuity},
+  author={Carter, Lori and Crockett, Catherine},
+  booktitle={2019 IEEE Frontiers in Education Conference (FIE)},
+  pages={1--9},
+  year={2019},
+  organization={IEEE},
+  doi={10.1109/FIE43999.2019.9028356},
+  url={https://doi.org/10.1109/FIE43999.2019.9028356}
+}
+
+
+@article{vakil2018ethics,
+  title={Ethics, identity, and political vision: Toward a justice-centered approach to equity in computer science education},
+  author={Vakil, Sepehr},
+  journal={Harvard Educational Review},
+  volume={88},
+  number={1},
+  pages={26--52},
+  year={2018},
+  publisher={Harvard Education Publishing Group},
+  doi={10.17763/1943-5045-88.1.26},
+  url={https://doi.org/10.17763/1943-5045-88.1.26}
+}
+
+@misc{schlenker2019ethics,
+  title={The Ethics of Data Science*},
+  author={Lee Schlenker},
+  year={2019},
+  month={5},
+  day={9},
+  howpublished={Towards Data Science},
+  url={https://towardsdatascience.com/the-ethics-of-data-science-e3b1828affa2}
+}
+
+@misc{rosenberg2018cambridge,
+  title={How {Trump} Consultants Exploited the {Facebook} Data of Millions},
+  author={Matthew Rosenberg and Nicholas Confessore and Carole Cadwalladr},
+  howpublished={The New York Times},
+  year={2018},
+  month={3},
+  day={17},
+  url={https://www.nytimes.com/2018/03/17/us/politics/cambridge-analytica-trump-campaign.html}
+}
+
+@incollection{gebru2020race,
+  title={Race and gender},
+  author={Gebru, Timnit},
+  booktitle={The Oxford Handbook of Ethics of {AI}},
+  pages={251--269},
+  year={2020},
+  month={7},
+  editor={Markus D. Dubber and Frank Pasquale and Sunit Das},
+  publisher={Oxford University Press},
+  doi={10.1093/oxfordhb/9780190067397.013.16},
+  url={https://www.oxfordhandbooks.com/view/10.1093/oxfordhb/9780190067397.001.0001/oxfordhb-9780190067397-e-16}
+}
+
+@article{xiao2021letter,
+  title={A Letter to the {Journal of Statistics and Data Science Education}---A Call for Review of “{OkCupid} Data for Introductory Statistics and Data Science Courses” by {Albert Y. Kim} and {Adriana Escobedo-Land}},
+  author={Xiao, Tiffany and Ma, Yifan},
+  journal={Journal of Statistics and Data Science Education},
+  pages={1--2},
+  year={2021},
+  publisher={Taylor \& Francis},
+  doi={10.1080/26939169.2021.1930812},
+  url={https://doi.org/10.1080/26939169.2021.1930812}
+}
+
+@article{kim2015okcupidcorrection,
+  title = {Correction to {OkCupid} data for introductory statistics and data science courses},
+  journal = {Journal of Statistics and Data Science Education},
+  author={Kim, Albert Y and Escobedo-Land, Adriana},
+  volume = {29},
+  number = {2},
+  pages = {216--216},
+  year  = {2021},
+  publisher = {Taylor & Francis},
+  doi = {10.1080/26939169.2021.1924516},
+  URL = {https://doi.org/10.1080/26939169.2021.1924516}
+}
+
+
+@book{d2020data,
+  title={Data Feminism},
+  author={D'Ignazio, Catherine and Klein, Lauren F},
+  year={2020},
+  month={3},
+  pages={328},
+  publisher={Boston: MIT Press},
+  isbn={9780262044004},
+  url={https://mitpress.mit.edu/books/data-feminism}
+}
+
+
+@inproceedings{bender2021dangers,
+  title={On the Dangers of Stochastic Parrots: Can Language Models Be Too Big?},
+  author={Bender, Emily M and Gebru, Timnit and McMillan-Major, Angelina and Shmitchell, Shmargaret},
+  booktitle={FAccT '21: Proceedings of the 2021 ACM Conference on Fairness, Accountability, and Transparency},
+  pages={610--623},
+  year={2021},
+  month={3},
+  doi={10.1145/3442188.3445922},
+  url={https://doi.org/10.1145/3442188.3445922}
+}
+
+
+@book{benjamin2019race,
+  title={Race After Technology: Abolitionist Tools for the New {Jim Code}},
+  author={Ruha Benjamin},
+  year={2019},
+  publisher={Polity: Cambridge},
+  pages={173},
+  isbn={9781509526406},
+}
+
+@misc{synced2020ai,
+  author={Fangyu Cai},
+  title={{Yann LeCun} Quits {Twitter} Amid Acrimonious Exchanges on {AI} Bias},
+  howpublished={Synced: AI Technology \& Industry Review},
+  year={2020},
+  month={6},
+  day={30},
+  url={https://syncedreview.com/2020/06/30/yann-lecun-quits-twitter-amid-acrimonious-exchanges-on-ai-bias/}
+}
+
 @article{tarran2019german,
   title={German commission calls for risk-based regulation of algorithmic systems},
   author={Tarran, Brian},
@@ -10,6 +275,16 @@
   doi={10.1111/j.1740-9713.2019.01329.x},
   url={https://doi.org/10.1111/j.1740-9713.2019.01329.x}
 }
+
+@book{zuboff2018surveillance,
+author = {Zuboff, Shoshana},
+title = {The Age of Surveillance Capitalism: The Fight for a Human Future at the New Frontier of Power},
+year = {2018},
+isbn = {1610395697},
+edition = {1},
+publisher={New York: PublicAffairs}
+}
+
 
 @article{tractenberg2019strengthening,
   title={Strengthening the practice and profession of statistics and data science using ethical guidelines},
@@ -29,11 +304,11 @@
 }
 
 @inproceedings{gunaratnaethical,
-  title={Ethical Reasoning with the 2016 Revised ASA Ethical Guidelines for Statistical Practice},
+  title={Ethical Reasoning with the 2016 Revised {ASA} Ethical Guidelines for Statistical Practice},
   author={Gunaratna, Nilupa S and Tractenberg, Rochelle E},
   year={2016},
   month={12},
-  journal={Proceedings of the Joint Statistical Meetings},
+  booktitle={Proceedings of the Joint Statistical Meetings},
   publisher={American Statistical Association},
   url={https://www.researchgate.net/publication/313309250\_Ethical\_Reasoning\_with\_the\_2016\_Revised\_ASA\_Ethical\_Guidelines\_for\_Statistical\_Practice}
 }
@@ -41,13 +316,13 @@
 
 @misc{rachel2019,
   author={{Conway Center for Innovation and Entrepreneurship}},
-  title={One Data Scientist's Experience Innovating at {Valiant Labs}},
+  title={One Data Scientist's Experience Innovating at [company]},
   year={2019},
   month={11},
   day={11},
   organization={The Jill Ker Conway Innovation and Entrepreneurship Center},
   howpublished={The Jill Ker Conway Innovation and Entrepreneurship Center},
-  url={https://conway-connect.com/innovation-news/2019/10/31/datascienceatvaliantlabs}
+  note={Article is no longer available online}
 }
 
 @article {kramer2015pnas,
@@ -70,7 +345,7 @@
   month={6},
   day={28},
   year={2014},
-  title={Everything We Know About Facebook's Secret Mood Manipulation Experiment},
+  title={Everything We Know About {Facebook}'s Secret Mood Manipulation Experiment},
   howpublished={The Atlantic},
   url={https://www.theatlantic.com/technology/archive/2014/06/everything-we-know-about-facebooks-secret-mood-manipulation-experiment/373648/}
 }
@@ -125,7 +400,7 @@
 
 
 @article{wang2018researcher,
-  title={Researcher requests for inappropriate analysis and reporting: A US Survey of consulting biostatisticians},
+  title={Researcher requests for inappropriate analysis and reporting: A {US} Survey of consulting biostatisticians},
   author={Wang, Min Qi and Yan, Alice F and Katz, Ralph V},
   journal={Annals of Internal Medicine},
   volume={169},
@@ -306,6 +581,19 @@
   url={https://dl.acm.org/citation.cfm?id=3154485}
 }
 
+@book{baumer2021mdsr,
+  title={{Modern Data Science with R}},
+  author={Benjamin S. Baumer and Daniel T. Kaplan and Nicholas J. Horton},
+  year={2021},
+  month={3},
+  day={12},
+  edition={2nd},
+  pages={1--673},
+  publisher={Chapman and Hall/CRC Press: Boca Raton},
+  isbn={9780367191498},
+  url={https://www.routledge.com/Modern-Data-Science-with-R/Baumer-Kaplan-Horton/p/book/9780367191498}
+}
+
 @book{baumer2016mdsr,
   title={{Modern Data Science with R}},
   author={Benjamin S. Baumer and Daniel T. Kaplan and Nicholas J. Horton},
@@ -336,6 +624,16 @@
   year={2016},
   publisher={New York: Crown},
   url={https://weaponsofmathdestructionbook.com/}
+}
+
+@misc{loukides2018oaths,
+  title={Of oaths and checklists},
+  author={Loukides, Mike and Mason, Hilary and Patil, D.J.},
+  year={2018},
+  month={7},
+  day={18},
+  howpublished={O'Reilly},
+  url={https://www.oreilly.com/radar/of-oaths-and-checklists/}
 }
 
 @book{eds2018mason,
@@ -369,7 +667,7 @@
   url={https://doi.org/10.1080/00031305.2016.1154108}
 }
 
-@misc{wasserstein2019moving,
+@article{wasserstein2019moving,
   title={Moving to a World Beyond ``$p< 0.05$"},
   author={Wasserstein, Ronald L and Schirm, Allen L and Lazar, Nicole A},
   year={2019},
@@ -377,9 +675,7 @@
   journal = {The American Statistician},
   volume = {73},
   number = {sup1},
-  pages = {1-19},
-  year  = {2019},
-  publisher = {Taylor & Francis},
+  pages = {1--19},
   doi = {10.1080/00031305.2019.1583913},
   url = {https://doi.org/10.1080/00031305.2019.1583913}
 }
@@ -424,7 +720,7 @@
   title={The {B}elmont Report: Ethical principles and guidelines for the protection of human subjects of research},
   author={{National Commission for the Protection of Human Subjects
 of Biomedical and Behavioral Research}},
-  instiution={Department of Health, Education, and Welfare},
+  institution={Department of Health, Education, and Welfare},
   volume={78},
   number={0012},
   pages={40},
@@ -489,7 +785,7 @@ of Biomedical and Behavioral Research}},
   url={https://amstat.tandfonline.com/doi/full/10.1080/10618600.2017.1384734}
 }
 
-@conference{d4bl,
+@misc{d4bl,
   author={Yeshimabeit Milner},
   title={{Data for Black Lives II}},
   year={2019},
@@ -588,15 +884,9 @@ of Biomedical and Behavioral Research}},
   number={7},
   pages={717--723},
   year={2008},
-  publisher={SAGE Publications Sage CA: Los Angeles, CA}
-}
-
-@Manual{R-papaja,
-  author = {Frederik Aust and Marius Barth},
-  title = {{papaja}: {Create} {APA} manuscripts with {R Markdown}},
-  year = {2018},
-  note = {R package version 0.1.0.9842},
-  url = {https://github.com/crsh/papaja},
+  publisher={SAGE Publications Sage CA: Los Angeles, CA},
+  doi={doi.org/10.1111/j.1467-9280.2008.02147.x},
+  url={https://doi.org/10.1111/j.1467-9280.2008.02147.x}
 }
 
 @article{kerr1998harking,
@@ -607,7 +897,9 @@ of Biomedical and Behavioral Research}},
   number={3},
   pages={196--217},
   year={1998},
-  publisher={Sage Publications Sage CA: Los Angeles, CA}
+  publisher={Sage Publications Sage CA: Los Angeles, CA},
+  doi={doi.org/10.1207/s15327957pspr0203_4},
+  url={https://doi.org/10.1207/s15327957pspr0203\_4}
 }
 
 @article{edmondson1999psychological,
@@ -618,7 +910,9 @@ of Biomedical and Behavioral Research}},
   number={2},
   pages={350--383},
   year={1999},
-  publisher={Sage Publications}
+  publisher={Sage Publications},
+  doi={10.2307/2666999},
+  url={https://doi.org/10.2307/2666999}
 }
 
 @article{casey2008content,
@@ -661,4 +955,78 @@ of Biomedical and Behavioral Research}},
   year={2019},
   howpublished={ISMIR 2019},
   url={http://archives.ismir.net/ismir2019/paper/000001.pdf}
+}
+
+@article{saltz2019integrating,
+  title={Integrating ethics within machine learning courses},
+  author={Saltz, Jeffrey and Skirpan, Michael and Fiesler, Casey and Gorelick, Micha and Yeh, Tom and Heckman, Robert and Dewar, Neil and Beard, Nathan},
+  journal={ACM Transactions on Computing Education (TOCE)},
+  volume={19},
+  number={4},
+  pages={1--26},
+  year={2019},
+  publisher={ACM New York, NY, USA},
+  doi={10.1145/3341164},
+  url={https://dl.acm.org/doi/10.1145/3341164}
+}
+
+@inproceedings{skirpan2018ethics,
+  title={Ethics education in context: A case study of novel ethics activities for the {CS} classroom},
+  author={Skirpan, Michael and Beard, Nathan and Bhaduri, Srinjita and Fiesler, Casey and Yeh, Tom},
+  booktitle={Proceedings of the 49th ACM Technical Symposium on Computer Science Education},
+  pages={940--945},
+  year={2018},
+  doi={10.1145/3159450.3159573},
+  url={https://dl.acm.org/doi/10.1145/3159450.3159573}
+}
+
+@inproceedings{fiesler2020we,
+  title={What Do We Teach When We Teach Tech Ethics? A Syllabi Analysis},
+  author={Fiesler, Casey and Garrett, Natalie and Beard, Nathan},
+  booktitle={Proceedings of the 51st ACM Technical Symposium on Computer Science Education},
+  pages={289--295},
+  year={2020},
+  doi={10.1145/3328778.3366825},
+  url={https://dl.acm.org/doi/10.1145/3328778.3366825}
+}
+
+@article{grosz2019,
+author = {Grosz, Barbara J. and Grant, David Gray and Vredenburgh, Kate and Behrends, Jeff and Hu, Lily and Simmons, Alison and Waldo, Jim},
+title = {Embedded {EthiCS}: Integrating Ethics across {CS} Education},
+year = {2019},
+issue_date = {August 2019},
+publisher = {Association for Computing Machinery},
+address = {New York, NY, USA},
+volume = {62},
+number = {8},
+issn = {0001-0782},
+url = {https://doi.org/10.1145/3330794},
+doi = {10.1145/3330794},
+journal = {Commun. ACM},
+month = jul,
+pages = {54--61},
+numpages = {8}
+}
+
+@article{canney2015framework,
+  title={A framework for the development of social responsibility in engineers},
+  author={Canney, Nathan and Bielefeldt, Angela},
+  journal={International Journal of Engineering Education},
+  volume={31},
+  number={1B},
+  pages={414--424},
+  year={2015},
+  url={https://dialnet.unirioja.es/servlet/articulo?codigo=6922074}
+}
+
+@misc{nas2019roundtable,
+  author={Ben Wender and Tyler Kloefkorn},
+  howpublished={The National Academies of Sciences, Engineering, and Medicine},
+  title={Roundtable on Data Science Postsecondary Education, {M}eeting \#5 Highlights},
+  month={12},
+  day={8},
+  year={2017},
+  url={https://www.nationalacademies.org/event/12-08-2017/docs/D8EE65EFC7F4B0C368D267EDAD10E5AB1BAFBE3369D2}
+
+
 }
