--- a/www/JSE_calendar.Rmd
+++ b/www/JSE_calendar.Rmd
@@ -6,7 +6,7 @@ output:
     number_sections: yes
 ---
 
-Resources for instructors for Albert Y. Kim and Johanna Hardin's Journal of Statistics Education paper:  
+Resources for instructors for Albert Y. Kim and Johanna Hardin's *Journal of Statistics and Data Science Education* paper:  
 [*"Playing the whole game": A data collection and analysis exercise with Google Calendar.*](https://doi.org/10.1080/10691898.2020.1799728){target="_blank"}
 
 ```{r, echo = FALSE, out.width = "80%"}
