added ethics homepage

--- a/www/bibliography.bib
+++ b/www/bibliography.bib
@@ -1,3 +1,12 @@
+@article{baumer2020integrating,
+  title={Integrating data science ethics into an undergraduate major: A Case Study},
+  author={Baumer, Benjamin S and Garcia, Randi L and Kim, Albert Y and Kinnaird, Katherine M and Ott, Miles Q},
+  journal={Journal of Statistics and Data Science Education},
+  year={2022},
+  note={to appear},
+  url={https://arxiv.org/abs/2001.07649}
+}
+
 @misc{codedbias,
   author={Shalini Kantayya and Joy Buolamwini},
   title =  {Coded Bias},
