added Five College Prize winners

--- a/www/awards.Rmd
+++ b/www/awards.Rmd
@@ -27,6 +27,7 @@ The <a href="https://www.fivecolleges.edu/statistics/">Five College Statistics</
 
 ### Awardees
 
+- 2022: Sarah Gillespie '22J, Joyce Huang '22, Arris Moise '22, Chichi Wu '22 <cite>(outstanding service to statistics)</cite>
 - 2021: Yujia (Starry) Zhou '21J and Hannah Snell '21 <cite>(outstanding service to statistics)</cite>
 - 2020: Laneé Jung '20 and Fatima Keita '20 <cite>(outstanding service to statistics)</cite>
 - 2019: Yue Kuang '19, Zixian Li '19, and Jingyi Liu '19 <cite>(outstanding senior capstone project)</cite>
