added Sara update

--- a/www/sds_newsletter_2022.qmd
+++ b/www/sds_newsletter_2022.qmd
@@ -75,6 +75,8 @@ I'm teaching both _Modeling for Machine Learning_ (SDS 293) and _Computational M
 
 - [Emily Flynn '14](https://www.linkedin.com/in/emily-flynn-863511179/): I finished my PhD in Biomedical Informatics at Stanford in summer of 2021 and started a job as a Senior Biological Data Scientist at UCSF, where I am working on a data science team in the department of immunology. I'm really enjoying all the learning in my new role, and helping researchers with exciting projects. In my spare time, I enjoy biking around the bay area, going on gorgeous hikes, and spending time with my cat. 
 
+- [Sara Stoudt '15](https://sastoudt.github.io/): My first year as an assistant professor at Bucknell University is in the books, and now I'm gearing up to teach a first-year seminar in the fall on "Storytelling with Data". Send me your favorite data stories! Here are some things I'm proud of this year: [for the birders](https://doi.org/10.1073/pnas.2110156119), [for the teachers](https://doi.org/10.1080/26939169.2022.2082602), and [for the creatives](https://datasciencebydesign.org/book).
+
 ## What's next? 
 
 ### Joint Statistical Meetings
