--- a/www/sds_newsletter_2022.qmd
+++ b/www/sds_newsletter_2022.qmd
@@ -50,6 +50,12 @@ I'm excited to begin the new year with new colleagues!
 
 #### Shiya Cao
 
+This year’s keywords for me included *new* and *transition*. As a newly minted Ph.D., I am looking forward to continuing to conduct disability inclusion and broader social inclusion research and engaging Smithies in these research projects. My doctoral dissertation focused on the critical view of the design of information systems to improve the workplace accommodation process for disabled employees. An initial version was [co-published](https://scholarspace.manoa.hawaii.edu/items/8a3b15d1-d537-403b-9eac-08d967d562bc) at the Hawaii International Conference on System Sciences in 2022. I also conducted digital accessibility research regarding data-based decision making to integrate accessibility guidelines into college curricula, which was [co-published](https://www.tandfonline.com/doi/full/10.1080/0144929X.2021.1940278) at Behavior & Information Technology in 2021. I also have a forthcoming coauthored book chapter titled “The Chains that Bind: Gender, Disability, Race, and IT Accommodations”. I am excited to further explore these research areas with Smithies and help them pay attention to human, social, and emotional elements of data science.
+
+I also can’t wait to start teaching at Smith! I will be teaching SDS 192 and SDS 100 this Fall. I taught an Introduction to Data Science course at WPI for five terms and developed course content including statistics lectures, data visualization labs, programming and machine learning tutorials, assignments, and quizzes. However, there are still things for me to learn with new materials, new platforms, new tools, and new students. I am thrilled to have the opportunity to evolve my teaching strategies, ideas, and philosophies as I grow alongside my students.
+
+Another new thing for me is that I have moved from Central MA to Western MA. This is the first time I have lived in the countryside. I love nature and seeing so much green. However, again, I have many new things to learn, such as gardening, living in harmony with bears. Life is full of adventure. Keep learning, keep improving. I am excited to start my new journey here with great colleagues and great students.
+
 #### Kaitlyn Cook
 
 #### Randi Garcia
